owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_operator_precedence-3.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_expr(\"my.field\")"
---
Expr {
    kind: BinaryExpr {
        lhs: Expr {
            kind: Identifier(
                "my",
            ),
            span: Span {
                lo: BytePos(
                    0,
                ),
                hi: BytePos(
                    2,
                ),
            },
        },
        rhs: Expr {
            kind: Identifier(
                "field",
            ),
            span: Span {
                lo: BytePos(
                    3,
                ),
                hi: BytePos(
                    8,
                ),
            },
        },
        op_type: OpDot,
    },
    span: Span {
        lo: BytePos(
            0,
        ),
        hi: BytePos(
            8,
        ),
    },
}
