owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_repl_input-4.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_repl(\"func()\")"
---
Stmt {
    kind: ExprSemi {
        expr: Expr {
            kind: FuncCall {
                callee: "func",
                args: [],
            },
            span: Span {
                lo: BytePos(
                    0,
                ),
                hi: BytePos(
                    6,
                ),
            },
        },
    },
    span: Span {
        lo: BytePos(
            0,
        ),
        hi: BytePos(
            6,
        ),
    },
}
