owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_repl_input-5.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_repl(\"\")"
---
Stmt {
    kind: Noop,
}
