owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_unary_operator-2.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_expr(\"-1\")"
---
Expr {
    kind: BinaryExpr {
        lhs: Expr {
            kind: Literal(
                0,
            ),
            span: Span {
                lo: BytePos(
                    0,
                ),
                hi: BytePos(
                    0,
                ),
            },
        },
        rhs: Expr {
            kind: Literal(
                1,
            ),
            span: Span {
                lo: BytePos(
                    1,
                ),
                hi: BytePos(
                    2,
                ),
            },
        },
        op_type: OpMinus,
    },
    span: Span {
        lo: BytePos(
            0,
        ),
        hi: BytePos(
            2,
        ),
    },
}
