owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_unary_operator-3.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_expr(\"-1 + 2\")"
---
Expr {
    kind: BinaryExpr {
        lhs: Expr {
            kind: BinaryExpr {
                lhs: Expr {
                    kind: Literal(
                        0,
                    ),
                },
                rhs: Expr {
                    kind: Literal(
                        1,
                    ),
                },
                op_type: OpMinus,
            },
        },
        rhs: Expr {
            kind: Literal(
                2,
            ),
        },
        op_type: OpPlus,
    },
}
